[package]
name = "core"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[lib] # 用于让别的crate引用自己
name = "core"
path = "src/lib.rs"
crate-type = ["cdylib"]


