[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"

[project]
name = "core"
classifiers = [
    "Programming Language :: Rust"
]
description = "Implements some test function in Rust"
# readme = "Readme.md"
#maintainers = [
#    {name = "messense", email = "messense@icloud.com"}
#]
# license = { file = "LICENSE" }

[project.optional-dependencies]
test = [
    "attrs",
    "boltons; sys_platform == 'win32'"
]

[project.scripts]
sum_as_string = "core:sum_as_string"
myfunc_return_first_char = "core:myfunc_return_first_char"
get_42 = "core:DummyClass.get_42"
